use COnstructor.newInstance, not Class.newInstance